--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 
 
@@ -51,10 +50,12 @@ nav a {
     color: #e5e7eb;
     text-decoration: none;
     font-weight: 500;
+    transition: all 0.3s ease;
 }
 
 nav a:hover {
     color: #38bdf8;
+    transform: scale(1.1);
 }
 
 /* Sections */
