--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ body::before {
     width: 100%;
     height: 100%;
 
-    background: url("images/bg.jpeg") no-repeat center center/cover;
+    background: url("bg.jpeg") no-repeat center center/cover;
 
     opacity: 0.50;   /* adjust 0.1 - 0.3 depending on visibility */
 
